# soc-log-detective

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
samples/: sample_auth_logs.jsonl  scenario_01_vpn_hop.jsonl  scenario_02_botnet_attack.jsonl  scenario_03_stolen_creds.jsonl  scenario_04_bec_attack.jsonl  scenario_05_api_leak.jsonl  scenario_06_insider_threat.jsonl  scenario_07_session_hijack.jsonl  scenario_08_new_device.jsonl  scenario_09_phoenix_moscow.jsonl  scenario_10_nation_state.jsonl
src/log_detective/: __init__.py  __main__.py  cli.py  correlate.py  ingest.py  report.py  schema.py  scoring.py  ui_streamlit.py
src/log_detective/detectors/: __init__.py  fail_success_chain.py  impossible_travel.py  new_device_ua.py
tests/: conftest.py  test_detectors.py  test_e2e.py  test_ingest.py  test_report.py
