[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-detective"
version = "0.1.0"
description = "SOC-Style Log Detective: Suspicious Login Detector + Case Report Generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "SOC Analyst", email = "soc@example.com"}
]
keywords = ["security", "soc", "detection", "authentication", "logs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "streamlit>=1.28",
    "pandas>=2.0",
    "haversine>=2.8",
    "user-agents>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
log-detective = "log_detective.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
